# plasma

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  version.h.ini  version.hpp.in
include/plasma/: plasma_server.h
include/plasma/config/: config.h  plasma_config.h
include/plasma/plugin/: plugin.h  plugin_manager.h
include/plasma/util/: directory_lock.h
plasma/: log.hpp
plasma/crash_report/: crash_reporter.hpp
plasma/hook/: hook_error.hpp  hook_manager.hpp
plasma/module/: module.hpp  module_manager.hpp
plasma/module/interface/: interface.hpp  interface_manager.hpp
plasma/plugin/: plugin.hpp  plugin_manager.hpp
plasma/plugin/exception/: plugin_loading_exception.hpp
src/plasma/: plasma_server.cpp
src/plasma/config/: config.cpp  plasma_config.cpp
src/plasma/plugin/: plugin.cpp  plugin_manager.cpp
src/plasma/util/: directory_lock.cpp
